# MHC

./: .gitignore  .pre-commit-config.yaml  404.html  MHC_DEEP_REVIEW.md  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  technical design document.md
.agent/workflows/: git-workflow.md
.github/workflows/: ci.yml  docs.yml
api/config/: index.html
api/constraints/: index.html
api/layers/: index.html
api/utils/: index.html
concepts/history_lifecycle/: index.html
concepts/hyper_connections/: index.html
concepts/manifold_constraints/: index.html
concepts/mathematical_derivation/: index.html
concepts/stability/: index.html
docs/: api.md  concepts.md  index.md
docs/api/: config.md  constraints.md  layers.md  utils.md
docs/concepts/: history_lifecycle.md  hyper_connections.md  manifold_constraints.md  mathematical_derivation.md  stability.md
docs/features/: checkpointing.md  gating.md  matrix_mixing.md  pruning.md  variational.md
docs/guides/: advanced_customization.md  custom_layers.md  frameworks.md  huggingface.md  performance_optimization.md  pytorch_lightning.md  tensorflow.md  testing_and_benchmarking.md  troubleshooting.md  vision.md
docs/tutorials/: basic_usage.md  quickstart.md
examples/: amp_training_demo.py  checkpointing_demo.py  conv2d_demo.py  dashboard_demo.py  gating_demo.py  hf_integration_demo.py  pruning_demo.py  variational_demo.py  visualization_demo.py
experiments/: benchmark_stability.py  deep_mlp_stress_test.py
features/checkpointing/: index.html
features/gating/: index.html
features/matrix_mixing/: index.html
features/pruning/: index.html
features/variational/: index.html
guides/advanced_customization/: index.html
guides/custom_layers/: index.html
guides/huggingface/: index.html
guides/performance_optimization/: index.html
guides/pytorch_lightning/: index.html
guides/tensorflow/: index.html
guides/testing_and_benchmarking/: index.html
guides/troubleshooting/: index.html
guides/vision/: index.html
mhc/: __init__.py
mhc/constraints/: __init__.py  identity.py  matrix.py  simplex.py
mhc/layers/: __init__.py  conv_mhc.py  history_buffer.py  managed.py  matrix_skip.py  mhc_skip.py
mhc/tf/: __init__.py  constraints.py  layers.py
mhc/utils/: __init__.py  dashboard.py  injection.py  lightning_callback.py  seed.py  visualization.py
stylesheets/: extra.css
tests/: test_amp_compatibility.py  test_constraints.py  test_conv_mhc.py  test_history_buffer.py  test_injection.py  test_managed.py  test_matrix.py  test_mhc_skip.py  test_tf_layers.py  test_utils.py
tutorials/basic_usage/: index.html
tutorials/quickstart/: index.html
