[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhc"
version = "0.1.0"
description = "A reference-grade PyTorch package for Manifold-Constrained Hyper-Connections (mHC)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mhc*"]
