[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhc"
version = "0.1.0"
description = "A reference-grade PyTorch package for Manifold-Constrained Hyper-Connections (mHC)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "pytest>=8.4.2",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "ruff >= 0.1.0",
    "mypy >= 1.0.0",
    "pre-commit >= 3.0.0",
    "mkdocs >= 1.5.0",
    "mkdocs-material >= 9.0.0",
    "mkdocstrings[python] >= 0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mhc*"]
