[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhc"
version = "0.5.0"
description = "Manifold-Constrained Hyper-Connections: Stable multi-history skip connections for deep neural networks."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["pytorch", "deep-learning", "skip-connections", "stability", "manifold-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = { text = "MIT" }
dependencies = [
    "torch>=2.0.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "ruff >= 0.14.13",
    "mypy >= 1.0.0",
    "pre-commit >= 3.0.0",
    "matplotlib >= 3.5.0",
    "mkdocs >= 1.5.0",
    "mkdocs-material >= 9.0.0",
    "mkdocstrings[python] >= 0.23.0",
]
tf = [
    "tensorflow>=2.12",
    "keras>=3.13.1",
]
viz = [
    "matplotlib>=3.5.0",
]
config = [
    "tomli>=2.0.0; python_version < '3.11'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mhc*"]
